Сценарій роботи з Bamo

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,18 @@
     <h1>BAMO</h1>
     <p>Наземний засіб пересування на електроприводі з дистанційним відео керуванням через мобільний інтернет.</p>
     <p>Суть проекту у розробці електромобіля Bamo.</p>
-    <p>Цей проект не про пожертвування, а саме про відкриту розробку, де кожен зацікавлений зможе витратити свій вільний час, поділитись своїми знаннями чи матеріалами. Можливо буде вестись облік часу та матеріалів, щоб інші учасники могли відшкодувати це грошима.</p>
-    <p>Відправна точка – одна сторінка як чистий аркуш із короткою інформацією.</p>
-    <p>Кінцевий результат:</p>
+    <p>Цей проект про відкриту розробку, де кожен зацікавлений зможе витратити свій вільний час, поділитись своїми знаннями чи матеріалами. Можливо буде вестись облік часу та матеріалів, щоб інші учасники могли відшкодувати це грошима.</p>
+    <h2>Відправна точка</h2>
+    <p>Одна сторінка як чистий аркуш із короткою інформацією.</p>
+    <h2>Кінцевий результат</h2>
     <ul>
       <li>Документація, за якою можна зібрати пристрій самостійно та без особливої кваліфікації.</li>
       <li>Стандартизація всіх компонентів з метою взаємозамінності елементів.</li>
     </ul>
+    <p>В теоріі, збірка одного Bamo з готових комплектуючих не повинна перевищувати 1 дня. Враховуючи, що кожна запчастина створюється різними людьми, то повний час створення Bamo, скоріш за всього, не буде перевищувати 1 тиждень.</p>
+    <h2>Сценарій роботи з Bamo</h2>
+    <p>Користувач сідає за персональний комп'ютер, відкриває программу (чи сайт), вводить логін/пароль, обирає доступний на сервері Bamo, на екрані користувача з'являються розташування пристрою на карті, відео з камери і елементи керування двигуном, рулем і камерою. Таким чином користувач може дистанційно перевозити грузи через небезпечні місця.</p>
+
     <p>Пропонуэться два різновиди автомобіля: Bаmo-S і Bаmo-M</p>
     <h2>Bаmo-S</h2>
     <p>Призначення</p>
